@@ -174,7 +174,7 @@ CONFIG_SAMA5_MPDDRC=y
 # LCDC Configuration
 #
 CONFIG_SAMA5_LCDC_BACKLIGHT=y
-CONFIG_SAMA5_LCDC_DEFBACKLIGHT=0xf0
+CONFIG_SAMA5_LCDC_DEFBACKLIGHT=0xc8
 CONFIG_SAMA5_LCDC_BACKCOLOR=0x7b5d
 # CONFIG_SAMA5_LCDC_OUTPUT_12BPP is not set
 # CONFIG_SAMA5_LCDC_OUTPUT_16BPP is not set
